force-app/main/default/objects/Internship__c/fields/Available_Positions__c.field-meta.xml
<CustomField>
    <fullName>Available_Positions__c</fullName>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <label>Available Positions</label>
</CustomField>