force-app/main/default/objects/Internship__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <type>TextArea</type>
    <label>Description</label>
</CustomField>