force-app/main/default/objects/Internship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <type>Date</type>
    <label>End Date</label>
</CustomField>