force-app/main/default/objects/Internship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <type>Picklist</type>
    <label>Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Part-time</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Remote</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>On-site</fullName>
                <active>true</active>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>